# Crucible

./: .gitignore  CHANGELOG.md  README.md  architecture.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: crucible-challenger.md
commands/: crucible.md
scripts/: render_skill_instances.py
skills/crucible/: SKILL.md
skills/crucible/references/: dialectical-protocol.md
skills/crucible/references/instances/: data-analysis.md  pure-reasoning.md  strategic-simulation.md
src/crucible/: __init__.py  cli.py  convergence.py  engine.py  instance.py  llm.py  roles.py  schema.py
src/crucible/instances/: data_analysis.json  pure_reasoning.json  strategic_simulation.json
tests/: test_cli.py  test_convergence.py  test_engine.py  test_instance.py  test_skill_sync.py
