[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-engine"
version = "0.0.1"
description = "Crucible：通用辩证推理引擎。在你相信一个想法之前，先让人攻击它。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
crucible = "crucible.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crucible = ["instances/*.json"]
